--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/express": "*",
     "@types/node": "*",
+    "source-map-support": "^0.5.3",
     "typescript": "*"
   },
   "scripts": {
