--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.2.1",
   "dependencies": {
     "express": "*",
-    "promise-mysql": "^3.2.1",
-    "mysql": "^2.5.4"
+    "promise-mysql": "^3.2.1"
   },
   "devDependencies": {
     "@types/express": "*",
