--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "typescript-node-express",
   "version": "0.2.1",
   "dependencies": {
-    "express": "*",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
     "promise-mysql": "^3.2.1"
   },
   "devDependencies": {
