--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,7 @@
 		"target": "es6",
 		"sourceMap": true,
 		"module": "commonjs",
-		"moduleResolution": "node",
-		"inlineSourceMap": true
+		"moduleResolution": "node"
 	},
 	"exclude": [
 		"node_modules",
