--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ node_modules
 .idea
 
 package-lock.json
+/jodel-webapp.sln
+/.vs/VSWorkspaceState.json
+/.vs/slnx.sqlite
+/.vs/ProjectSettings.json
+/.vs/jodel-webapp/v15/.suo
+*.config
+/vwd.webinfo
