--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "load-json-file": "^4.0.0",
     "promise-mysql": "^3.2.1"
   },
   "devDependencies": {
