--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/express": "*",
     "@types/node": "*",
     "source-map-support": "^0.5.3",
-    "typescript": "^2.9.0-dev.20180407"
+    "typescript": "~2.5.3"
   },
   "scripts": {
     "start": "tsc && node build/app.js",
