Huge Fix on function getMostSimiliar of Class Db and fixed textools extractKeyword which missinterpreted some Hashtags as Keywords

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ package-lock.json
 
 ./public/src/style/colors_renderes.less
 /src/config.ts
+/src/dbtest.ts
+/build/dbtest.js.map
+/build/dbtest.js
